1. Implemented instrumentation version of AOP. 2. Added first UI draft. 3. Changed structure of Policy files.